<!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="error_view_oops_message">Oops</string>
    <string name="error_view_retry_button_text">TRY AGAIN</string>
    <string name="error_view_error_text">There\'s an error loading the page</string>

    <string name="drawer_item_about">About</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_agents">Agents</string>

    <string name="warning_ssl_dialog_title">Warning</string>
    <string name="warning_ssl_dialog_content">Ignoring SSL certificate validity is incredibly dangerous and opens up the app for all kinds of security problems. Specifically, making the app vulnerable to <a href="https://en.wikipedia.org/wiki/Man-in-the-middle_attack">man-in-the-middle attacks</a>. Use it on your own risk!</string>

    <!--Default dialogs button titles-->
    <string name="dialog_ok_title">OK</string>

    <string name="about_app_url_privacy" tools:ignore="TypographyDashes">https://telegra.ph/TeamCityApp-Private-Policy-09-18</string>

    <!--Theme-->
    <string name="key_preference_theme" translatable="false">preference_key_theme</string>

    <string name="name_light_theme">Light theme</string>
    <string name="name_dark_theme">Dark theme</string>
    <string name="name_auto_battery">Auto battery</string>
    <string name="name_follow_system">Follow system</string>

    <string name="value_light_theme" translatable="false">Light</string>
    <string name="value_dark_theme" translatable="false">Dark</string>
    <string name="value_auto_battery" translatable="false">Auto-battery</string>
    <string name="value_follow_system" translatable="false">System</string>

    <!--Drawer-->
    <string name="content_navigation_content_description">Navigation drawer</string>

    <!--About/Drawer-->
    <string name="about_app_text_privacy">Privacy policy</string>
</resources>
