<!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!--new drawer-->
    <string name="text_menu_accounts">Accounts</string>
    <string name="text_rate_the_app">Rate the app</string>
    <string name="text_divider">•</string>
    <string name="text_add_account">Add another account</string>
    <string name="text_manage_accounts">Manage accounts</string>
</resources>
