...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_4"
    android:layout_marginBottom="@dimen/dp_16">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacy"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4"
        android:text="@string/about_app_text_privacy"
        android:textAppearance="?attr/textAppearanceBody2"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_the_app"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_4"
        android:text="@string/text_rate_the_app"
        android:textAppearance="?attr/textAppearanceBody2"
...
